--- a/index.html
+++ b/index.html
@@ -4,12 +4,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Jinkan</title>
 </head>
 <body>
     <header>
         <img src="./funimation-logo.svg" alt="">
-        <p>SHOUNEN</p>
+        <div class="header-categories">
+            <p>Shonen</p>
+            <p>Drama</p>
+            <p>Action</p>
+            <p>Ova</p>
+            <p>Tv</p>
+        </div>
     </header>
+    <main>
+        <!-- <div class="container-slide"> -->
+            <!-- <div class="action-button" id="previous"></div> -->
+        <div class="container-section">
+            <div class="section-title">
+                <p>Shonen</p>    
+            </div>
+            <div class="container-cards">
+                <div class="card">
+                    <img src="./img/gtacard2.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/godOfWar.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/ReadDead.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/gtacard2.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/godOfWar.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/ReadDead.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/gtacard2.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/godOfWar.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/ReadDead.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="container-section">
+            <div class="section-title">
+                <p>Shonen</p>    
+            </div>
+            <div class="container-cards">
+                <div class="card">
+                    <img src="./img/gtacard2.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/godOfWar.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/ReadDead.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/gtacard2.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/godOfWar.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/ReadDead.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/gtacard2.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/godOfWar.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="./img/ReadDead.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        
+            <!-- <div class="action-button" id="next"></div> -->
+        <!-- </div> -->
+    </main>
 </body>
 </html>
