Sistema de gêneros pré-carregados concluído.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="./main.js" defer></script>
     <title>Jinkan</title>
 </head>
 <body>
@@ -12,83 +13,34 @@
         <img src="./funimation-logo.svg" alt="">
         <div class="header-categories">
             <p>Shonen</p>
-            <p>Drama</p>
-            <p>Action</p>
-            <p>Ova</p>
-            <p>Tv</p>
+            <p>Supernatural</p>
+            <p>Avant Garde</p>
         </div>
     </header>
     <main>
         <!-- <div class="container-slide"> -->
             <!-- <div class="action-button" id="previous"></div> -->
-        <div class="container-section">
+        <div class="container-section" id="Shounen">
             <div class="section-title">
                 <p>Shonen</p>    
             </div>
-            <div class="container-cards">
-                <div class="card">
-                    <img src="./img/gtacard2.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/godOfWar.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/ReadDead.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/gtacard2.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/godOfWar.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/ReadDead.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/gtacard2.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/godOfWar.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/ReadDead.jpg" alt="">
-                </div>
-            </div>
+            <div class="container-cards" id="container-cards-shounen"></div>
         </div>
-        <div class="container-section">
+
+        <div class="container-section" id="Supernatural">
             <div class="section-title">
-                <p>Shonen</p>    
+                <p>Supernatural</p>    
             </div>
-            <div class="container-cards">
-                <div class="card">
-                    <img src="./img/gtacard2.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/godOfWar.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/ReadDead.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/gtacard2.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/godOfWar.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/ReadDead.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/gtacard2.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/godOfWar.jpg" alt="">
-                </div>
-                <div class="card">
-                    <img src="./img/ReadDead.jpg" alt="">
-                </div>
-            </div>
+            <div class="container-cards" id="container-cards-supernatural"></div>
         </div>
+
+        <div class="container-section" id="Avant-Garde">
+            <div class="section-title">
+                <p>Avant Garde</p>    
+            </div>
+            <div class="container-cards" id="container-cards-avant-garde"></div>
+        </div>
+
         
             <!-- <div class="action-button" id="next"></div> -->
         <!-- </div> -->
