Corrigido margin do main.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <!-- <div class="container-slide"> -->
             <!-- <div class="action-button" id="previous"></div> -->
-        <div class="container-section" id="Shounen">
+        <div class="container-section shounen" id="Shounen">
             <div class="section-title">
                 <p>Shonen</p>    
             </div>
