--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <title>Jinkan</title>
 </head>
 <body>
-    <header>
+    <div class="header">
         <img src="./funimation-logo.svg" alt="">
         <div class="header-categories">
             <p>Shonen</p>
             <p>Supernatural</p>
             <p>Avant Garde</p>
         </div>
-    </header>
+        <div class="barra-de-pesquisa"></div>
+    </div>
     <main>
         <!-- <div class="container-slide"> -->
             <!-- <div class="action-button" id="previous"></div> -->
