--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
                 <p id="section-title">Welcome to Funimation!</p>    
             </div>
             <div class="container-cards" id="container-cards">
-                <!-- <a href="#">
-                    <img src="img/gta.jpg" alt="" id="img-card">
-                </a> -->
+                <a href="#">
+                    <img src="" alt="" id="img-card">
+                </a>
                 <p class="defaut-text">Search for any anime or genre.</p>
-                <!-- <div class="modal-container">
-                    <div class="modal-content">
-                        <div class="first-column">
-                            <img src="" alt="">
-                            <p></p>
-                        </div>
-                        <div class="second-column">
-                            <p></p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
+        </div>
+        <div class="modal-container" id="modal-container">
+            <!-- <div class="modal-content">
+                <div class="first-column">
+                    <img src="" alt="">
+                    <p></p>
+                </div>
+                <div class="second-column">
+                    <p></p>
+                </div>
+            </div> -->
         </div>
     </main>
 </body>
