--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cards.css">
+    <link rel="stylesheet" href="css/header.css">
     <script src="./main.js" defer></script>
     <title>Jinkan</title>
 </head>
@@ -47,15 +49,6 @@
             </div>
         </div>
         <div class="modal-container" id="modal-container">
-            <!-- <div class="modal-content">
-                <div class="first-column">
-                    <img src="" alt="">
-                    <p></p>
-                </div>
-                <div class="second-column">
-                    <p></p>
-                </div>
-            </div> -->
         </div>
     </main>
 </body>
